--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Link to Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <!-- Link to the CSS file -->
-    <link rel="stylesheet" href="web.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
